styles.css
/* ... */
p a,
.article-grid1 h2 a,
h3 a {
  color: #333333;
  text-decoration: none;
}

p {
  font-size: 1.3rem;
}

a:focus, 
button:focus,
.cat-btn:focus, 
input:focus {
  outline: 0.125em solid #f7985aaf;
  outline-offset: 0.125em;
}


/* navbar */
.menu {
  display: flex;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1003;
  justify-content: space-between; 
  align-items: center;
  padding: 1em 3em;
  border-bottom: 0.0625em solid black;
  background-color: rgba(255, 255, 255, 0.9); 
  box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.1);
}

span {
 color: #333333;
 font-weight: bold;
}

.grid-wrapper {
  display: grid;
  grid-template-columns: 3fr 0.75fr; /* Consistent sizing */
  gap: 1em;
  margin: 0 auto;
  min-height: 400px
}

.grid-wrapper img {
    width: 100%; /* Fill container */
    height: auto; /* Maintain aspect ratio */
    display: block; /* Prevent inline block spacing */
}

.article-grid1,
.article-grid2,
.article-grid3 {
  display: grid;
  max-width: 100%;
  gap: 1em;
  padding: 1.5em;
}

.navbar-items {
  flex-grow: 1;
  display: flex;
  justify-content: flex-end;
  padding-right: 1.25em;
}

.logo-container {
  position: absolute; 
  left: 0;
  top: 0;
  z-index: 10; 
}

.logo-container img {
  max-height: 9.26vh; 
  width: auto; 
}

/* search icon styling */
.search-icon {
    position: relative;
    font-size: 1.8rem;
    color: #247b91 ; 
    margin-right: 1.25em;
    transition: color 0.3s ease-in-out;
}

.search-icon:hover {
  color: #f7985aaf;
}

.menu-items {
  transform: translateX(100%); 
  transition: transform 0.3s ease-in-out;
}

.menu-items.open {
  transform: translateX(0); 
}

/* hamburger menu slide-in */
.hamburger-menu {
  position: fixed;
  top: 0;
  left: -100%;
  width: 40vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.9); 
  z-index: 1002;
  padding-top: 3.75em;
  transition: left 0.4s ease;
}

.hamburger-menu.show {
   left: 0; 
}

.hamburger-menu-items {
  list-style-type: none;
  padding: 0;
  margin: 0;
  width: 100%;
  text-align: left;
}

.hamburger-menu-items li {
  margin-bottom: 1.25em;
}

.hamburger-menu-items li a {
  color: #ffffff;
  text-decoration: none;
  font-size: 1.3rem;
  padding: 0.9375em 1.25em;
  display: block;
  font-weight: bold;
  transition: color 0.3s ease;
}

.hamburger-menu-items li a:hover {
  color: #b45406; 
}

.content-wrapper.blurred {
  filter: blur(0.3125em); 
  transition: filter 0.4s ease;
}

.menu-toggle img, 
.search-icon img {
  width: min(40px, 2.08vw);
  height: auto;
  top: 20%;
}

.search-container {
  display: flex;
  align-items: center;
  background-color: transparent;
  padding: 0.625em;
  border: 0.125em solid #247b91 ;
  background-color: rgba(255, 255, 255, 0.95); 
  border-radius: 3.125em;
}

.search-container i {
  font-size: 1.5rem;
  color: #247b91 ;
}

#search-input {
  border: none;
  outline: none;
  font-size: 1.2rem;
  margin-left: 0.625em;
  padding: 0.3125em;
  background-color: transparent;
  color: #333333;
}

#search-input::placeholder {
  color: #333333;
}

/* Close search popup on click outside */
body.modal-open {
  overflow: hidden;
}

main {
  max-width: 75vw;
  background-color: rgb(247 247 247 / 1);
  padding: 2em;
  border-radius: 1.5em;
  box-shadow: rgb(0 0 0 / 40%) 0px 0px 3.125em 0.5em;
  margin: 3em auto;  
  box-sizing: border-box;
}

.main-content {
  margin: 0 auto;
  max-width: 100%;
}

.navbar-items ul {
  list-style-type: none; 
  display: flex; 
  margin-left: auto; 
}

.navbar-items ul li {
  margin-left: 0.125em; 
}

.navbar-items ul li a {
  text-decoration: none; 
  font-size: 1.25rem;
  font-weight: 700;
  padding: 0.625em;
  color: #247b91 ;
}

.navbar-items ul li a:hover {
  color: #b45406;
  border-radius: 0.25em;
  text-decoration: underline;
}

/* Featured Topics Styling */
.article-index,
.author-bio,
.featured-topics {
  background-color: #ffffff; 
  color: #262626; 
  padding: 2em;
  border-radius: 0.5em;
  box-shadow: rgb(0 0 0 / 10%) 0px 4px 8px; 
}

.article-index h2,
.featured-topics h2 {
  color: #247b91 ;
  font-size: 1.8rem;
  padding-bottom: 1em;
  text-align: left; 
  font-weight: 700;
}

.article-index ul,
.featured-topics ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.article-index li,
.featured-topics li {
  padding: 1em 0;
  border-bottom: 0.0625em solid #e0e0e0; 
}

.article-index li:last-child,
.featured-topics li:last-child {
  border-bottom: none;
}

.featured-topics h3 {
  font-size: 1.3rem;
  color: #247b91 ; 
  font-weight: 700;
  margin: 0;
}

.featured-topics h3 a {
  text-decoration: none;
  color: inherit;
  transition: color 0.3s ease;
}

.article-index ul li a:hover,
.featured-topics h3 a:hover {
  color: #b45406; 
}

.featured-topics span {
  display: block;
  color: #262626;
  font-size: 1rem;
  margin-top: 0.2em;
  line-height: 1.5;
}

/* hero post author */

#intro-paragraph {
  text-align: justify;
}
.hero-post-author {
  display: flex;
  flex-direction: row;
  justify-content: left;
  align-items: flex-end;
}

.author-img {
  height: 15vh;
}

.author-img img {
  height: 100%;
  width: auto;
}

/* author bio */
.author-bio {
  text-align: center;
}

.author-bio p {
  font-size: 1rem;
  padding: 1em;
}

.newsletter-img img,
.cta-section img {
  width: 22vw;
  height: auto;
  justify-content: left;
  align-items: center;
}

.author-bio img {
  width: 15vw;
  height: auto;
}

.author-bio,
.cta-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 100%;
  padding: 2rem;
  border-radius: 0.5em;
  margin: 0 auto;
}

.cta-sub {
  display: flex;
  flex-direction: column;
}

.cta-sub h2 {
  text-align: center;
}

.cta-sub p {
  text-align: center;
}

.article-sub p {
  padding: 1em;
}

.article-sub ul li a,
.article-sub ul li a span,
.author-bio p a,
.article-list ol li a,
.article-sub p a {
  color: #dc5908; 
  font-weight: bold; 
  transition: color 0.2s ease-in-out;

}
/* ... */

